fix: :bug: Fix height of symptoms list
Fix the height of symptoms list that was too short for long list

--- a/src/styles/components/_skeleton.scss
+++ b/src/styles/components/_skeleton.scss
@@ -225,7 +225,7 @@
             background-color: $color-white;
             border-radius: 0 0 0 1.875rem;
             border-top: .7881rem solid $color-green;
-            height: 7rem;
+            height: 8rem;
             margin: 0 auto;
             left: 0;
             max-width: 19rem;
